--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ select {
   background-color: #fdfdfd;
   padding: 1rem;
   border-radius: 20px;
+  box-shadow: 10px 10px 10px 6px rgba(0, 0, 0, 0.24);
 }
 
 .todo-container header {
